--- a/to-do-list.html
+++ b/to-do-list.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To-Do List</title>
+  <title>Modern To-Do List</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
     <h1>To-Do List</h1>
-    
-    <!-- Form to add new tasks -->
     <form id="taskForm">
-      <input type="text" id="taskInput" placeholder="Enter a new task" required />
-      <button type="submit">Add Task</button>
+      <input type="text" id="taskInput" placeholder="Add a new task..." />
+      <button type="submit">Add</button>
     </form>
-
-    <!-- Task list -->
     <ul id="taskList"></ul>
   </div>
-   <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+  
