--- a/to-do-list.html
+++ b/to-do-list.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>To-Do List</h1>
+    <p class="cursive-text">Checklist</p>
     <form id="taskForm">
       <input type="text" id="taskInput" placeholder="Add a new task..." />
       <button type="submit">Add</button>
